[WIP] remove authToken lines from CI

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,7 +4,7 @@ on:
   push:
 jobs:
   tests:
-    runs-on: self-hosted
+    runs-on: linux
     steps:
       - uses: actions/checkout@v2
       - uses: cachix/install-nix-action@v8
@@ -12,6 +12,4 @@ jobs:
         with:
           name: korayal-hls
           signingKey: "${{ secrets.CACHIX_SIGNING_KEY }}"
-          # Only needed for private caches
-          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
       - run: nix-build
